--- a/static/index.html
+++ b/static/index.html
@@ -14,6 +14,8 @@
     </div>
     <script>
         async function upload () {
+            document.getElementById('submit').disabled = true
+
             try {
                 const file = document.getElementById('file')?.files[0]
                 const formData = new FormData()
@@ -27,6 +29,8 @@
                 window.location.replace(json.data)
             } catch (error) {
                 console.error('Error uploading file', error)
+            } finally {
+                document.getElementById('submit').disabled = false;
             }
         }
 
